--- a/test-report-receiver-backend/src/main/resources/application.properties
+++ b/test-report-receiver-backend/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 server.port=8080
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
